# gcp-llm-retrieval-augmentation

./: .firebaserc  .gitignore  README.md  cloudbuild.yml  firebase.json  firestore.rules
api/: Dockerfile  firestore_retriever.py  main.py  pyproject.toml  setup.py
api/src/api/: __init__.py
docs/: 1_matching_engine.md  2_create_embeddings.md  3_cloud_run.md  3_firestore.md  4_agent.md  4_firestore.md  5_cloud_run.md  6_firebase.md
embeddings/: agent.ipynb  embeddings.ipynb  metadata.json  pyproject.toml  similarity_search.ipynb
firestore/: index_docs.ipynb  pyproject.toml
terraform/: .terraform.lock.hcl  apis.tf  cloud-run.tf  main.tf  matching-engine.tf  terraform-example.tfvars
terraform/data/: one_vector.json
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.svelte  Demo.svelte  app.css
