[project]
name = "langchain-llmops-firestore"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Daniel Rodriguez", email = "daniel@danielfrg.com" }]
dependencies = [
    "jupyterlab>=4.0.3",
    "datasets>=2.14.0",
    "google-cloud-firestore>=2.11.1",
    "firebase-admin>=6.2.0",
    "tqdm>=4.65.0",
    "ipywidgets>=8.0.7",
    "jupyterlab_widgets>=3.0.8",
]
# readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
